# NeuralNetworkCPP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  neuralnetwork
include/: essential.hpp  layer.hpp  neural_network.hpp  neuron.hpp  xor.hpp
src/: layer.cpp  main.cpp  neural_network.cpp  neuron.cpp
